# hx-complete

./: .gitattributes  .gitignore  .vscodeignore  LICENSE.md  README.md  package.json
.github/workflows/: release.yaml
.github/workflows/scripts/: verify_changes.py
data/: htmx2.html-data.json
data-generator/: generate.py
hx-complete-extension/: htmx2.html-data.json  package.json
hx-complete-generator/: generate.py  pyproject.toml
